--- a/Streamlit_local_tunnel.ipynb
+++ b/Streamlit_local_tunnel.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "Streamlit local tunnel.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/jingxianho/streamlit-local-tunnel/blob/main/Streamlit_local_tunnel.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -51,7 +40,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install numpy"
+        "pip install pandas"
       ],
       "metadata": {
         "id": "YN0rRxBRSWud"
